Small fixes on header and images , created matrix service

--- a/src/app/guides/guides.component.html
+++ b/src/app/guides/guides.component.html
@@ -1,6 +1,9 @@
-<section class="main">
+
+<h2>Work in progress</h2>
+
+<!-- <section class="main">
   <div class="inner">
-    <h2 class="title">Guides</h2>
+  <h2 class="title">Guides</h2>
     <div class="entries">
       <div class="entry">
         <div class="card">
@@ -13,4 +16,4 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
