--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,40 +4,6 @@
       <a routerLink="/home">Arcana</a>
     </li>
     <li class="menu-item">
-      <a routerLink="/healing">Healing
-        <img src="assets/other/chevron-down.svg">
-      </a>
-      <div class="header-dropdown-menu">
-        <a routerLink="/healing/guide">
-          <div class="title-tags">
-            <span class="title">Guide</span>
-          </div>
-          <p class="description">truly worthy of a reddit gold</p>
-        </a>
-        <a routerLink="/healing/teams">
-          <div class="title-tags">
-            <span class="title">Teams</span>
-          </div>
-          <p class="description">don't show this to eren he might just MA all over the page</p>
-        </a>
-        <a routerLink="/healing/calculator" class="beta">
-          <div class="title-tags">
-            <span class="title">Calculator</span>
-            <span class="beta-tag-dd">Beta</span>
-          </div>
-          <p class="description">when hard coded excel tables just aren't enough for you</p>
-        </a>
-      </div>
-    </li>
-    <li class="menu-item wip">
-      <a routerLink="/guides">Guides</a>
-      <span class="wip-tag">WIP</span>
-    </li>
-    <!-- <li class="menu-item beta" EXAMPLE BETA TAG USAGE>
-      -- main div stuff --
-      <span class="beta-tag">Beta</span>
-    </li> -->
-    <li class="menu-item wip">
       <a>Index
         <img src="assets/other/chevron-down.svg">
       </a>
@@ -61,8 +27,43 @@
           <p class="description">uhm</p>
         </a>
       </div>
+    </li>
+    <li class="menu-item">
+      <a routerLink="/healing">Healing
+        <img src="assets/other/chevron-down.svg">
+      </a>
+      <div class="header-dropdown-menu">
+        <a routerLink="/healing/guide">
+          <div class="title-tags">
+            <span class="title">Guide</span>
+          </div>
+          <p class="description">truly worthy of a reddit gold</p>
+        </a>
+        <a routerLink="/healing/teams" class="wip">
+          <div class="title-tags">
+            <span class="title">Teams</span>
+            <span class="wip-tag-dd">WIP</span>
+          </div>
+          <p class="description">don't show this to eren he might just MA all over the page</p>
+        </a>
+        <a routerLink="/healing/calculator" class="beta">
+          <div class="title-tags">
+            <span class="title">Calculator</span>
+            <span class="beta-tag-dd">Beta</span>
+          </div>
+          <p class="description">when hard coded excel tables just aren't enough for you</p>
+        </a>
+      </div>
+    </li>
+    <li class="menu-item wip">
+      <a routerLink="/guides">Guides</a>
       <span class="wip-tag">WIP</span>
     </li>
+    <!-- <li class="menu-item beta" EXAMPLE BETA TAG USAGE>
+      -- main div stuff --
+      <span class="beta-tag">Beta</span>
+    </li> -->
+
     <li class="menu-item">
       <a routerLink="/glossary">Glossary</a>
     </li>
