--- a/src/app/healing/healing.component.html
+++ b/src/app/healing/healing.component.html
@@ -1,8 +1,8 @@
 <section class="main">
   <div class="intro">
     <div class="titles">
-      <h3 class="title">Healing - Overview</h3>
-      <h4 class="subtitle">Lorem ipsum</h4>
+      <h3 class="title">Healing</h3>
+      <h4 class="subtitle">Overview</h4>
     </div>
     <p class="description">This section of the project is dedicated to Katherine Isley's so-called "Healing Guide". What started out as a humble Excel tabl- someone else finish the rest. Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Lorem ipsum dolor sit amet, consecte tur adipiscing elit.</p>
   </div>
