--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,17 +6,18 @@
   <div class="footer-nav-container">
     <ul class="nav">
       <!-- fill it as we go -->
+      <!-- EDIT: Index needs an overview page for this architecture to be acceptable -->
       <li>
         <a routerLink="/home">Home</a>
+      </li>
+      <li>
+        <a routerLink="/units-index">Index</a>
       </li>
       <li>
         <a routerLink="/healing">Healing</a>
       </li>
       <li>
         <a routerLink="/guides">Guides</a>
-      </li>
-      <li>
-        <a routerLink="/units-index">Index</a>
       </li>
       <li>
         <a routerLink="/glossary">Glossary</a>
