Update on sim unit page styling

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,19 +12,19 @@
           <div class="title-tags">
             <span class="title">Simulacra</span>
           </div>
-          <p class="description">the people of fantasy tower</p>
+          <p class="description">Information about the weapons in the game.</p>
         </a>
         <a routerLink="matrices-index">
           <div class="title-tags">
             <span class="title">Matrices</span>
           </div>
-          <p class="description">rectangular casino chips</p>
+          <p class="description">Matrix chips that can be equipped on weapons.</p>
         </a>
         <a routerLink="relics-index">
           <div class="title-tags">
             <span class="title">Relics</span>
           </div>
-          <p class="description">uhm</p>
+          <p class="description">Tools that assist the Wanderer in combat and exploration.</p>
         </a>
       </div>
     </li>
@@ -37,21 +37,21 @@
           <div class="title-tags">
             <span class="title">Guide</span>
           </div>
-          <p class="description">truly worthy of a reddit gold</p>
+          <p class="description">Guide with tips and tricks on how to play support and specific weapon breakdown with their buffs and abilities.</p>
         </a>
         <a routerLink="/healing/teams" class="wip">
           <div class="title-tags">
             <span class="title">Teams</span>
             <span class="wip-tag-dd">WIP</span>
           </div>
-          <p class="description">don't show this to eren he might just MA all over the page</p>
+          <p class="description">Different support team examples and how to use them.</p>
         </a>
         <a routerLink="/healing/calculator" class="beta">
           <div class="title-tags">
             <span class="title">Calculator</span>
             <span class="beta-tag-dd">Beta</span>
           </div>
-          <p class="description">when hard coded excel tables just aren't enough for you</p>
+          <p class="description">A support calculator to help you estimate the buffs and healing your team provides.</p>
         </a>
       </div>
     </li>
