--- a/src/app/unit-page/unit-page.component.scss
+++ b/src/app/unit-page/unit-page.component.scss
@@ -276,6 +276,15 @@
             .attack-method p {
                 font-weight: 400;
             }
+
+            .attack-description{
+                margin: 0 0 20px 0;
+            }
+
+            .attack-paragraph{
+                margin: 0 0 10px 0;
+
+            }
         }
     }
 }
