Implement index overview page, collapse Index overview and Healing overview styles as universal Overview styles. Add responsive Index overview, Healing overview, footer, and mobile header. Change order of 404 page items.

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <div>
+  <div class="sanctuary">
     <img src="../assets/other/mana.svg" alt="Mana Icon">
     <span>Arcana Sanctuary</span>
   </div>
@@ -11,7 +11,7 @@
         <a routerLink="/home">Home</a>
       </li>
       <li>
-        <a routerLink="/units-index">Index</a>
+        <a routerLink="/index">Index</a>
       </li>
       <li>
         <a routerLink="/healing">Healing</a>
