--- a/src/app/healing/healing.component.html
+++ b/src/app/healing/healing.component.html
@@ -1,4 +1,4 @@
-<section class="main">
+<section class="main overview">
   <div class="intro">
     <div class="titles">
       <h3 class="title">Healing</h3>
