--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -16,13 +16,13 @@
         <a routerLink="/home">Home</a>
       </li>
       <li>
+        <a routerLink="/index">Index</a>
+      </li>
+      <li>
         <a routerLink="/healing">Healing</a>
       </li>
       <li>
         <a routerLink="/guides">Guides</a>
-      </li>
-      <li>
-        <a routerLink="/units-index">Index</a>
       </li>
       <li>
         <a routerLink="/glossary">Glossary</a>
