--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -5,10 +5,16 @@
     align-items: center;
     justify-content: space-around;
     width: 100%;
-    height: 100px;
+    padding: 20px;
     border-top: 2px solid $border; // should be new $border color
     font-size: 18px;
     font-weight: 300;
+
+    .sanctuary {
+        display: flex;
+        align-items: center;
+        gap: 4px;
+    }
 
     .nav {
         display: flex;
@@ -22,6 +28,36 @@
                     color: $link;
                 }
             }
+        }
+    }
+}
+
+@media only screen and (max-width: $laptopL) {
+    .footer {
+        .nav {
+            gap: 16px;
+        }
+    }
+}
+
+@media only screen and (max-width: $laptop) {
+    .footer {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 16px;
+
+        .nav {
+            flex-direction: column;
+        }
+    }
+}
+
+@media only screen and (max-width: $mobile) {
+    .footer {
+        gap: 12px;
+
+        .nav {
+            gap: 12px;
         }
     }
 }
