--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,23 +4,23 @@
       <a routerLink="/home">Arcana</a>
     </li>
     <li class="menu-item">
-      <a>Index
+      <a routerLink="/index">Index
         <img src="assets/other/chevron-down.svg">
       </a>
       <div class="header-dropdown-menu">
-        <a routerLink="/units-index">
+        <a routerLink="/index/units-index">
           <div class="title-tags">
             <span class="title">Simulacra</span>
           </div>
           <p class="description">Information about the weapons in the game.</p>
         </a>
-        <a routerLink="matrices-index">
+        <a routerLink="/index/matrices-index">
           <div class="title-tags">
             <span class="title">Matrices</span>
           </div>
           <p class="description">Matrix chips that can be equipped on weapons.</p>
         </a>
-        <a routerLink="relics-index">
+        <a routerLink="/index/relics-index">
           <div class="title-tags">
             <span class="title">Relics</span>
           </div>
@@ -77,48 +77,48 @@
     <img class="menu-icon" src="assets/other/menu-icon.svg" alt="">
     <ul class="burger-menu">
       <li class="menu-item beta">
-        <a class="hyperlink" routerLink="/units-index">
+        <a class="hyperlink" routerLink="/index">
           <div class="item-wrapper">
-            <img src="assets/other/guides.svg" alt="Beta Icon">
-            <span>Index</span>
+            <img class="item-icon" src="assets/other/guides.svg" alt="Beta Icon">
+            <span class="item-text">Index</span>
           </div>
-          <img src="assets/other/arrow-right.svg" alt="Right Arrow">
+          <img class="arrow" src="assets/other/arrow-right.svg" alt="Right Arrow">
         </a>
       </li>
       <li class="menu-item">
         <a class="hyperlink" routerLink="/healing">
           <div class="item-wrapper">
-            <img src="assets/other/double-cross.svg" alt="Healing Guide Icon">
-            <span>Healing</span>
+            <img class="item-icon" src="assets/other/double-cross.svg" alt="Healing Guide Icon">
+            <span class="item-text">Healing</span>
           </div>
-          <img src="assets/other/arrow-right.svg" alt="Right Arrow">
+          <img class="arrow" src="assets/other/arrow-right.svg" alt="Right Arrow">
         </a>
       </li>
       <li class="menu-item">
         <a class="hyperlink" routerLink="/guides">
           <div class="item-wrapper">
-            <img src="assets/other/guides.svg" alt="Guides Icon">
-            <span>Guides</span>
+            <img class="item-icon" src="assets/other/guides.svg" alt="Guides Icon">
+            <span class="item-text">Guides</span>
           </div>
-          <img src="assets/other/arrow-right.svg" alt="Right Arrow">
+          <img class="arrow" src="assets/other/arrow-right.svg" alt="Right Arrow">
         </a>
       </li>
       <li class="menu-item">
         <a class="hyperlink" routerLink="/glossary">
           <div class="item-wrapper">
-            <img src="assets/other/dev.svg" alt="Glossary Icon">
-            <span>Glossary</span>
+            <img class="item-icon" src="assets/other/dev.svg" alt="Glossary Icon">
+            <span class="item-text">Glossary</span>
           </div>
-          <img src="assets/other/arrow-right.svg" alt="Right Arrow">
+          <img class="arrow" src="assets/other/arrow-right.svg" alt="Right Arrow">
         </a>
       </li>
       <li class="menu-item">
         <a class="hyperlink" routerLink="/about-us">
           <div class="item-wrapper">
-            <img src="assets/other/dev.svg" alt="About Us Icon">
-            <span>About Us</span>
+            <img class="item-icon" src="assets/other/dev.svg" alt="About Us Icon">
+            <span class="item-text">About Us</span>
           </div>
-          <img src="assets/other/arrow-right.svg" alt="Right Arrow">
+          <img class="arrow" src="assets/other/arrow-right.svg" alt="Right Arrow">
         </a>
       </li>
     </ul>
