--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,11 +7,14 @@ $link: #7DC9FF;
 // $font: "Inter", sans-serif;
 $font: 'Exo', sans-serif;
 // $font: 'Exo 2', sans-serif;
-$laptop: 1440px;
-$tablet: 1024px;
-$mobile: 768px;
+$laptopL: 1440px;
+$laptop: 1024px;
+$tablet: 768px;
+$mobile: 425px;
 
 // TESTING PURPOSES VIEWPORT USED: 1920PX
+// COMPONENTS AND TOP-LEVEL STYLES
+
 body {
     margin: 0;
     background-color: $main;
@@ -68,7 +71,7 @@ main {
         margin: 0 0 80px 0;
     }
 
-    app-units-index, app-unit-page, app-matrices-index, app-relics-index, app-guides, app-glossary, app-healing, app-healing-guide, app-healing-teams, app-healing-calculator, app-about-us, app-page-not-found { // with how Angular loads pages, just do this for every main component
+    app-index, app-units-index, app-unit-page, app-matrices-index, app-relics-index, app-healing, app-healing-guide, app-healing-teams, app-healing-calculator, app-guides, app-glossary,  app-about-us, app-page-not-found { // with how Angular loads pages, just do this for every main component
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -213,5 +216,109 @@ main {
 
     80% {
         text-shadow: none;
+    }
+}
+
+// OVERVIEW PAGE STYLES
+
+.overview {
+    max-width: 1220px;
+    width: 100%;
+    padding: 0 20px;
+    display: flex;
+    flex-direction: column;
+
+    .intro {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+
+        .titles {
+            display: flex;
+            flex-direction: column;
+            gap: 4px;
+    
+            .title {
+                font-size: 36px;
+                font-weight: bold;
+                margin: unset;
+            }
+    
+            .subtitle {
+                font-size: 24px;
+                font-weight: 200;
+                color: $link;
+                margin: unset;
+            }
+        }
+
+        .description {
+            margin: unset;
+        }
+    }
+
+    .entries {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+        margin: 40px 0 0 0;
+        grid-auto-rows: 1fr;
+    
+        .card {
+            background-color: $content;
+            border-radius: 10px;
+            height: 100%;
+            transition: 0.25s ease;
+            cursor: pointer;
+
+            // consider using an animation that *isnt* scale as the image and text look like shit during the transition
+            &:hover {
+                transform: translate3D(0,-1px,0) scale(1.02);
+            }
+           
+            .card-img-top {
+                border-top-left-radius: 10px;
+                border-top-right-radius: 10px;
+            }
+    
+            .card-body {
+                padding: 20px 20px 30px;
+    
+                .card-title {
+                    font-size: 20px;
+                    font-weight: 600;
+                }
+    
+                .card-text {
+                    font-size: 16px;
+                    font-weight: 300;
+                }
+            }
+        }
+    }
+}
+
+// UNIVERSAL MOBILE STYLES
+
+@media only screen and (max-width: $laptop) {
+    .overview {
+        .entries {
+            grid-template-columns: repeat(2, 1fr);
+        }
+    }
+}
+
+@media only screen and (max-width: $tablet) {
+    .overview {
+        .entries {
+            grid-template-columns: repeat(1, 1fr);
+            justify-items: center;
+            gap: 40px;
+
+            .entry {
+                max-width: 500px;
+                width: 100%;
+            }
+        }
     }
 }
