Delete square-card, add empty missing relics index components, add routing, minor changes

--- a/src/app/matrices-index/matrices-index.component.html
+++ b/src/app/matrices-index/matrices-index.component.html
@@ -1,6 +1,6 @@
 <section class="main">
   <h2 class="title-big-center">Matrices</h2>
-  <div class="units-category-filter">
+  <div class="matrices-category-filter">
     <div class="rarity">
       <h5 class="title">Rarity</h5>
       <div class="wrapper">
@@ -39,7 +39,7 @@
       </div>
     </div>
   </div>
-  <div class="units-index">
+  <div class="matrices-index">
     <app-matrix-card *ngFor="let matrix of matrices" [matrix]="matrix"></app-matrix-card>
   </div>
 </section>
