--- a/src/app/matrices-index/matrices-index.component.scss
+++ b/src/app/matrices-index/matrices-index.component.scss
@@ -1,6 +1,6 @@
 @import '../../styles.scss';
 
-.units-category-filter {
+.matrices-category-filter {
     display: flex;
     max-width: 1200px;
     width: 100%;
@@ -73,6 +73,7 @@
         }
     }
 }
+
 .rarity {
     &-ssr, &-sr {
         font-weight: 600;
@@ -85,10 +86,9 @@
     &-sr {
         color: #D6CDFF;
     }
-
 }
 
-.units-index {
+.matrices-index {
     margin: 40px 0 0 0;
     width: 100%;
     display: grid;
@@ -96,7 +96,7 @@
     gap: 30px;
     justify-items: center;
 
-    app-unit-card {
+    app-matrix-card {
         width: 100%;
     }
 }
@@ -109,11 +109,9 @@
     width: 100%;
     padding: 0px 20px;
 
-    
     .title-big-center {
         text-align: center;
         font-size: 36px;
         font-weight: 600;
     }
-
 }
