--- a/src/app/unit-page/unit-page.component.scss
+++ b/src/app/unit-page/unit-page.component.scss
@@ -3,86 +3,106 @@
 .main {
     max-width: 1220px;
     width: 100%;
-    padding: 0 20px;
+    //padding: 0 20px;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
     position: relative;
 
     .header-element {
         display: flex;
-        // width: 1180px; we do not set static widths to content containers! we do the next 2 lines below
-        // max-width: 1220px; this is inherited from the parent
+        flex-direction: column;
         width: 100%;
-        padding: 10px 20px;
-        background-image: var(--background-image);
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: right; // ?
-        min-height: 141px; // svg height
-        // position: absolute;
 
-        .unit-avatar {
-            display: flex;
-            justify-content: left;
-            align-items: center;
-            margin: 0 25px 0 15px;
+        background-color: $content;
+        //position:fixed;
+
+        .header-strip {
+            background-color: var(--element-color);
+            height: 5px;
+
         }
 
-        .unit-avatar img {
-            width: 90px;
-        }
-
-        .unit-name-element {
+        .header-content {
+            padding: 30px 20px;
             display: flex;
-            justify-content: center;
-            gap: 2px;
-            margin: 0 40px 0 0;
-            flex-direction: column;
-            min-width: 130px;
+            flex-direction: row;
+            width: 85%;
+            justify-content: space-between;
+            
 
-            .unit-name {
-                color: #F5F5F5;
-                font-size: 24px;
-                font-weight: 600;
-                text-transform: uppercase;
-                line-height: 24px;
-            }
-
-            .unit-weapon-name {
-                color: #F5F5F5;
-                font-size: 16px;
-                font-weight: 200;
-                font-style: italic;
-            }
-
-            .unit-element {
+            .unit-wrapper {
                 display: flex;
-                justify-content: left;
-                align-items: center;
-                gap: 5px;
+                flex-direction: row;
+
+
+                .unit-avatar {
+                    display: flex;
+                    justify-content: left;
+                    align-items: center;
+                    margin: 0 25px 0 15px;
+                }
+
+                .unit-avatar img {
+                    width: 120px;
+                }
+
+                .unit-name-element {
+                    display: flex;
+                    justify-content: center;
+                    gap: 2px;
+                    flex-direction: column;
+
+
+                    .unit-name {
+                        color: #F5F5F5;
+                        font-size: 24px;
+                        font-weight: 600;
+                        text-transform: uppercase;
+                        line-height: 24px;
+                    }
+
+                    .unit-weapon-name {
+                        color: #F5F5F5;
+                        font-size: 22px;
+                        font-weight: 200;
+                        font-style: italic;
+                        padding: 5px 0px;
+                    }
+
+                    .unit-element {
+                        display: flex;
+                        justify-content: left;
+                        align-items: center;
+                        gap: 5px;
+                    }
+
+                    .unit-element img {
+                        width: 36px;
+                    }
+                }
             }
 
-            .unit-element img {
-                width: 36px;
+            .unit-stats,
+            .unit-roles {
+                display: flex;
+                flex-direction: column;
+                gap: 14px;
+
+
             }
-        }
 
-        .unit-stats {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            gap: 20px;
-            margin: 0 40px 0 0;
-
-            .top-stats, .bottom-stats {
+            .top-stats,
+            .bottom-stats {
                 display: flex;
                 gap: 20px;
 
+
                 .stats {
+
                     .grade {
                         line-height: 1;
-                        font-size: 20px;
+                        font-size: 16px;
                         font-style: normal;
                         font-weight: bold;
                         color: $content;
@@ -92,13 +112,15 @@
                     }
                 }
             }
-        }
 
-        .unit-roles {
-            display: flex;
-            gap: 20px;
-            align-items: flex-end;
-            padding-bottom: 14px;
+            .stats-title {
+                border: 2px solid var(--element-color);
+                width: fit-content;
+                padding: 4px 18px;
+                font-style: italic;
+                font-weight: 500;
+                font-size: 16px;
+            }
         }
     }
 
@@ -109,6 +131,9 @@
         width: 100%;
         padding: 20px 20px;
         background-color: $content;
+
+
+
 
         .tabs {
             display: grid;
@@ -140,11 +165,14 @@
             }
         }
 
-        .matrix-part, .materials-part, .guide-part {
+        .matrix-part,
+        .materials-part,
+        .guide-part {
             display: none;
         }
 
         .profile-part {
+
             .info-selection {
                 position: relative;
                 display: flex;
@@ -178,6 +206,7 @@
             }
 
             .advancements-table {
+
                 padding: 20px 80px;
                 width: 100%;
                 display: flex;
@@ -277,11 +306,11 @@
                 font-weight: 400;
             }
 
-            .attack-description{
+            .attack-description {
                 margin: 0 0 20px 0;
             }
 
-            .attack-paragraph{
+            .attack-paragraph {
                 margin: 0 0 10px 0;
 
             }
@@ -289,16 +318,17 @@
     }
 }
 
-.stats, .roles {
+.stats,
+.roles {
     display: flex;
     gap: 10px;
-    align-items: center;
     color: #F5F5F5;
     font-size: 16px;
-    font-weight: 400;
+    font-weight: 300;
     font-style: italic;
 }
 
-.stats img, .roles img {
-    width: 36px;
+.stats img,
+.roles img {
+    width: 28px;
 }
