--- a/src/app/unit-page/unit-page.component.scss
+++ b/src/app/unit-page/unit-page.component.scss
@@ -20,7 +20,6 @@
         .header-strip {
             background-color: var(--element-color);
             height: 5px;
-
         }
 
         .header-content {
@@ -29,12 +28,10 @@
             flex-direction: row;
             width: 85%;
             justify-content: space-between;
-            
 
             .unit-wrapper {
                 display: flex;
                 flex-direction: row;
-
 
                 .unit-avatar {
                     display: flex;
@@ -53,7 +50,6 @@
                     gap: 2px;
                     flex-direction: column;
 
-
                     .unit-name {
                         color: #F5F5F5;
                         font-size: 24px;
@@ -65,7 +61,7 @@
                     .unit-weapon-name {
                         color: #F5F5F5;
                         font-size: 22px;
-                        font-weight: 200;
+                        font-weight: 300;
                         font-style: italic;
                         padding: 5px 0px;
                     }
@@ -88,8 +84,6 @@
                 display: flex;
                 flex-direction: column;
                 gap: 14px;
-
-
             }
 
             .top-stats,
@@ -97,9 +91,7 @@
                 display: flex;
                 gap: 20px;
 
-
                 .stats {
-
                     .grade {
                         line-height: 1;
                         font-size: 16px;
@@ -131,9 +123,6 @@
         width: 100%;
         padding: 20px 20px;
         background-color: $content;
-
-
-
 
         .tabs {
             display: grid;
@@ -206,11 +195,10 @@
             }
 
             .advancements-table {
-
-                padding: 20px 80px;
+                padding: 0px 80px;
                 width: 100%;
                 display: flex;
-                margin: 20px 0 0 0;
+                margin: 30px 0 0 0;
                 flex-direction: column;
                 row-gap: 30px;
             }
@@ -229,17 +217,17 @@
 
             .advancements-text-column {
                 width: 95%;
-                font-weight: 200;
+                font-weight: 300;
             }
 
             .attack-wrap {
-                padding: 20px 80px;
+                padding: 0px 80px;
                 width: 100%;
                 display: flex;
-                margin: 20px 0 0 0;
+                margin: 30px 0 0 0;
                 flex-direction: column;
-                row-gap: 30px;
-                font-weight: 200;
+                row-gap: 20px;
+                font-weight: 300;
 
                 ul {
                     list-style-position: outside;
@@ -280,7 +268,12 @@
 
             .attack-container {
                 border-bottom: 1px solid $border;
-                padding: 0 0 30px;
+                padding: 0 0 20px;
+            }
+
+            .attack-container:last-child {
+                border-bottom: none;
+                padding: unset;
             }
 
             .attack-heading {
@@ -321,7 +314,8 @@
 .stats,
 .roles {
     display: flex;
-    gap: 10px;
+    align-items: center;
+    gap: 8px;
     color: #F5F5F5;
     font-size: 16px;
     font-weight: 300;
