--- a/src/app/matrix-card/matrix-card.component.html
+++ b/src/app/matrix-card/matrix-card.component.html
@@ -1,20 +1,69 @@
 <div class="unit-wrapper" [attr.data-unit]="matrix.slug" [routerLink]="'/matrix-page/' + matrix.slug">
-  <div class="top-card"
-    style="background-image: url(&quot;../../assets/backgrounds/hexagons.png&quot;);">
+  <div class="top-card" style="background-image: url(&quot;../../assets/backgrounds/hexagons.png&quot;);">
     <div class="content-wrapper"
-    style="background-image: url(&quot;../assets/matrices/{{matrix.slug}}_matrix.webp&quot;);">
+      style="background-image: url(&quot;../assets/matrices/{{matrix.slug}}_matrix.webp&quot;);">
       <div class="{{matrix.tag}}-tag">{{matrix.tag}}</div>
       <div class="details-container">
         <h5 class="name">{{matrix.name}}</h5>
         <div class="type-and-buffs">
-          <div class="icons">  
-            <img *ngFor="let element of matrix.element" [src]="'assets/elements/' + element.toLowerCase() + '.png'" [alt]="element">
+          <div class="icons">
+            <img *ngFor="let element of matrix.element" [src]="'assets/elements/' + element.toLowerCase() + '.png'"
+              [alt]="element">
           </div>
           <div class="buffs" [class]="getRarityClass()">
-             {{matrix.rarity.toUpperCase()}}
+            {{matrix.rarity.toUpperCase()}}
           </div>
         </div>
       </div>
+    </div>
+  </div>
+
+  <!-- TOP AND BACK SHUFFLE ON HOVER -->
+  <div class="back-card" style="background-image:  url(&quot;../../assets/backgrounds/hexagons.png&quot;);">
+    <div class="back-card-content">
+      
+      <div class="bc-wrapper" *ngIf="matrix['twopc'] && matrix['twopc'].effect">
+        <div class="bc-header">
+          <div class="bc-title" [class]="getRarityClass()">2-Piece</div>
+          <div class="bc-roles">
+            <div *ngFor="let role of matrix?.twopc?.roles">
+              <img src="assets/elements/{{role}}.png" alt="{{role}} resonance">
+            </div>
+          </div>
+        </div>
+        <div *ngFor="let buff of matrix?.twopc?.buffs">
+          <div>{{buff}}</div>
+        </div>
+      </div>
+
+      <div class="bc-wrapper" *ngIf="matrix['fourpc'] && matrix['fourpc'].effect">
+        <div class="bc-header" >
+          <div class="bc-title" [class]="getRarityClass()">4-Piece</div>
+          <div class="bc-roles">
+            <div *ngFor="let role of matrix?.fourpc?.roles">
+              <img src="assets/elements/{{role}}.png" alt="{{role}} resonance">
+            </div>
+          </div>
+        </div>
+        <div *ngFor="let buff of matrix?.fourpc?.buffs">
+          <div>{{buff}}</div>
+        </div>
+      </div>
+
+      <div class="bc-wrapper" *ngIf="matrix['threepc'] && matrix['threepc'].effect">
+        <div class="bc-header" >
+          <div class="bc-title" [class]="getRarityClass()">3-Piece</div>
+          <div class="bc-roles">
+            <div *ngFor="let role of matrix?.threerpc?.roles">
+              <img src="assets/elements/{{role}}.png" alt="{{role}} resonance">
+            </div>
+          </div>
+        </div>
+        <div *ngFor="let buff of matrix?.threerpc?.buffs">
+          <div>{{buff}}</div>
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
