--- a/src/app/matrix-card/matrix-card.component.scss
+++ b/src/app/matrix-card/matrix-card.component.scss
@@ -2,17 +2,54 @@
 
 
 .ssr-class {
-    color:#FFDB9B; /* Define styles for SSR rarity */
-  }
-  
-  .sr-class {
-    color:#D6CDFF; /* Define styles for SR rarity */
-  }
+    color: #FFDB9B;
+    /* Define styles for SSR rarity */
+}
 
+.sr-class {
+    color: #D6CDFF;
+    /* Define styles for SR rarity */
+}
+
+
+
+.back-card-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+
+    .bc-wrapper {
+        height: 50%;
+        font-size: 16px;
+        font-weight: 400;
+
+        .bc-header {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+
+            .bc-title {
+                font-size: 20px;
+                font-weight: 600;
+            }
+
+            .bc-roles {
+                display: flex;
+                flex-direction: row;
+                gap: 4px;
+
+                img {
+                    width: 30px;
+                    height: fit-content;
+                }
+
+            }
+        }
+    }
+}
 
 .unit-wrapper {
-    // width: 100%; 
-    // height: 220px;
     aspect-ratio: 0.9 / 1; // this might be problematic later so we'll see
     cursor: pointer;
     position: relative;
@@ -20,7 +57,7 @@
     .top-card {
         position: relative;
         z-index: 2;
-        
+
         background: $main; // this dumbassery fixes the whole "transparent character artwork background-image" problem and makes me wonder why i even went to school in the first place
     }
 
@@ -30,6 +67,7 @@
         top: 0;
         left: 0;
         background: $main;
+        overflow: hidden;
         // backface-visibility: hidden;
         // transform: translateZ(0), scale(1, 1);
     }
@@ -107,11 +145,9 @@
 
     .top-card,
     .back-card {
-       // background-position: 80% 20%;
-        //background-size:85%;
-        background-size:cover;
-        background-repeat: no-repeat; // weird edge case
 
+        background-size: cover;
+        background-repeat: no-repeat; // weird edge case
         width: 100%;
         height: 100%;
         border-radius: 8px;
@@ -128,7 +164,7 @@
             display: flex;
             align-items: flex-end;
             background-position: 80% -10%;
-            background-size:90%;
+            background-size: 90%;
             background-repeat: no-repeat; // weird edge case
 
             .new-tag {
