--- a/src/app/relics-index/relics-index.component.html
+++ b/src/app/relics-index/relics-index.component.html
@@ -1,9 +1,45 @@
 <section class="main">
-  <h2 class="title-big-center">Relics</h2>
-  <div class="relics-category-filter">
-
+  <h2 class="title-big-center">Matrices</h2>
+  <div class="matrices-category-filter">
+    <div class="rarity">
+      <h5 class="title">Rarity</h5>
+      <div class="wrapper">
+        <span class="rarity-ssr" data-rarity="ssr">SSR</span>
+        <span class="rarity-sr" data-rarity="sr">SR</span>
+      </div>
+    </div>
+    <div class="element">
+      <h5 class="title">Element</h5>
+      <div class="wrapper">
+        <img src="../assets/elements/element_all.png" alt="All Elements" data-element="all" class="active">
+        <img src="../assets/elements/element_physical.png" alt="Physical Element" data-element="physical">
+        <img src="../assets/elements/element_flame.png" alt="Flame Element" data-element="flame">
+        <img src="../assets/elements/element_frost.png" alt="Frost Element" data-element="frost">
+        <img src="../assets/elements/element_volt.png" alt="Volt Element" data-element="volt">
+        <img src="../assets/elements/element_altered.png" alt="Altered Element" data-element="altered">
+      </div>
+    </div>
+    <div class="type">
+      <h5 class="title">Type</h5>
+      <div class="wrapper">
+        <img src="../assets/elements/attack.png" alt="DPS Type" data-type="damage">
+        <img src="../assets/elements/benediction.png" alt="Benediction Type" data-type="benediction">
+        <img src="../assets/elements/fortitude.png" alt="Fortitude Type" data-type="fortitude">
+      </div>
+    </div>
+    <div class="role">
+      <h5 class="title">Role</h5>
+      <div class="wrapper">
+        <img src="../assets/effects/buff_mdps.png" alt="DPS Role" data-role="MDPS">
+        <img src="../assets/effects/buff_buffer.png" alt="Buffer DPS Role" data-role="Buffer">
+        <img src="../assets/effects/buff_healer.png" alt="Healer Role" data-role="Healer">
+        <img src="../assets/effects/buff_supportbuffer.png" alt="Support Buffer Role" data-role="SupportBuffer">
+        <img src="../assets/effects/buff_shatter.png" alt="Shatter Role" data-role="Shatter">
+        <img src="../assets/effects/buff_taunt.png" alt="Taunt Role" data-role="Taunt">
+      </div>
+    </div>
   </div>
-  <div class="relics-index">
-    <!-- <app-relic-card *ngFor="let relic of relics" [relic]="relic"></app-relic-card> -->
+  <div class="matrices-index">
+    <app-relic-card *ngFor="let relic of relics" [relic]="relic"></app-relic-card>
   </div>
 </section>
