Minor class name changes and space removal

--- a/src/app/relics-index/relics-index.component.html
+++ b/src/app/relics-index/relics-index.component.html
@@ -1,6 +1,6 @@
 <section class="main">
-  <h2 class="title-big-center">Matrices</h2>
-  <div class="matrices-category-filter">
+  <h2 class="title-big-center">Relics</h2>
+  <div class="relics-category-filter">
     <div class="rarity">
       <h5 class="title">Rarity</h5>
       <div class="wrapper">
@@ -39,7 +39,7 @@
       </div>
     </div>
   </div>
-  <div class="matrices-index">
+  <div class="relics-index">
     <app-relic-card *ngFor="let relic of relics" [relic]="relic"></app-relic-card>
   </div>
 </section>
