--- a/src/app/relics-index/relics-index.component.scss
+++ b/src/app/relics-index/relics-index.component.scss
@@ -1,6 +1,6 @@
 @import '../../styles.scss';
 
-.matrices-category-filter {
+.relics-category-filter {
     display: flex;
     max-width: 1200px;
     width: 100%;
@@ -88,7 +88,7 @@
     }
 }
 
-.matrices-index {
+.relics-index {
     margin: 40px 0 0 0;
     width: 100%;
     display: grid;
