Relic page additions

--- a/src/app/relic-card/relic-card.component.html
+++ b/src/app/relic-card/relic-card.component.html
@@ -1,4 +1,4 @@
-<div class="unit-wrapper" [attr.data-unit]="relic.slug" [routerLink]="'/matrix-page/' + relic.slug">
+<div class="unit-wrapper" [attr.data-unit]="relic.slug" [routerLink]="'/relic-page/' + relic.slug">
     <div class="top-card" style="background-image: url(&quot;../../assets/backgrounds/hexagons.png&quot;);">
       <div class="content-wrapper"
         style="background-image: url(&quot;../assets/relics/{{relic.slug}}_relic.png&quot;);">
