--- a/src/styles.scss
+++ b/src/styles.scss
@@ -71,7 +71,7 @@ main {
         margin: 0 0 80px 0;
     }
 
-    app-index, app-units-index, app-unit-page, app-matrices-index, app-relics-index, app-healing, app-healing-guide, app-healing-teams, app-healing-calculator, app-guides, app-glossary,  app-about-us, app-page-not-found { // with how Angular loads pages, just do this for every main component
+    app-index, app-units-index, app-unit-page, app-matrix-page, app-relic-page, app-matrices-index, app-relics-index, app-healing, app-healing-guide, app-healing-teams, app-healing-calculator, app-guides, app-glossary,  app-about-us, app-page-not-found { // with how Angular loads pages, just do this for every main component
         width: 100%;
         display: flex;
         flex-direction: column;
